log/build_2025-04-19_06-34-45/gpio_nav_control/stdout_stderr.log
running egg_info
writing ../../build/gpio_nav_control/gpio_nav_control.egg-info/PKG-INFO
writing dependency_links to ../../build/gpio_nav_control/gpio_nav_control.egg-info/dependency_links.txt
writing entry points to ../../build/gpio_nav_control/gpio_nav_control.egg-info/entry_points.txt
writing requirements to ../../build/gpio_nav_control/gpio_nav_control.egg-info/requires.txt
writing top-level names to ../../build/gpio_nav_control/gpio_nav_control.egg-info/top_level.txt
reading manifest file '../../build/gpio_nav_control/gpio_nav_control.egg-info/SOURCES.txt'
writing manifest file '../../build/gpio_nav_control/gpio_nav_control.egg-info/SOURCES.txt'
running build
running build_py
copying gpio_nav_control/button_control.py -> /home/rasp/ros2_ws/build/gpio_nav_control/build/lib/gpio_nav_control
running install
running install_lib
copying /home/rasp/ros2_ws/build/gpio_nav_control/build/lib/gpio_nav_control/button_control.py -> /home/rasp/ros2_ws/install/gpio_nav_control/lib/python3.12/site-packages/gpio_nav_control
byte-compiling /home/rasp/ros2_ws/install/gpio_nav_control/lib/python3.12/site-packages/gpio_nav_control/button_control.py to button_control.cpython-312.pyc
  File "/home/rasp/ros2_ws/install/gpio_nav_control/lib/python3.12/site-packages/gpio_nav_control/button_control.py", line 378
    duration = abs distance / speed
                   ^^^^^^^^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/rasp/ros2_ws/install/gpio_nav_control/lib/python3.12/site-packages/gpio_nav_control-0.0.1-py3.12.egg-info' (and everything under it)
Copying ../../build/gpio_nav_control/gpio_nav_control.egg-info to /home/rasp/ros2_ws/install/gpio_nav_control/lib/python3.12/site-packages/gpio_nav_control-0.0.1-py3.12.egg-info
running install_scripts
Installing button_control script to /home/rasp/ros2_ws/install/gpio_nav_control/lib/gpio_nav_control
writing list of installed files to '/home/rasp/ros2_ws/build/gpio_nav_control/install.log'
